feat(update): update Automation image with molecule 3.04 ans ansible 2.9.7

--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -1,17 +1,17 @@
-ARG PACKER_VERSION=1.4.0
-ARG DOCKER_VERSION=18.09.6
+ARG PACKER_VERSION=1.5.5
+ARG DOCKER_VERSION=19.03.8
 
 FROM hashicorp/packer:${PACKER_VERSION} as packer
 FROM docker:${DOCKER_VERSION} as docker
 
-FROM python:3.6.8-slim-stretch
+FROM python:3.8-slim-buster
 
 LABEL com.kaliop.vendor=Kaliop
 
-ENV ANSIBLE_VERSION=2.8
-ENV MOLECULE_VERSION=2.20.0
-ENV TESTINFRA_VERSION=3.0.4
-ENV DOCKER_COMPOSE_VERSION=1.24.0
+ENV ANSIBLE_VERSION=2.9.7
+ENV MOLECULE_VERSION=3.0.4
+ENV TESTINFRA_VERSION=3.4.0
+ENV DOCKER_COMPOSE_VERSION=1.25.5
 ENV LOCALE=fr_FR.UTF-8
 
 RUN  apt-get update \
